# simple_ocr_reader

./: README.md
OCR_Reader/ocr_reader/: pyproject.toml
OCR_Reader/ocr_reader/ocr_reader/: reader.py
